@@ -3,6 +3,8 @@ CHANGES IN FLTK 1.1.8
 	- Documentation fixes (STR #1454, STR #1455, STR #1456,
 	  STR #1457, STR #1458, STR #1460, STR #1481, STR #1578,
 	  STR #1639, STR #1645, STR #1644)
+	- Fixed mapping of subwindows with unmapped parent
+	  windows (STR #1706)
 	- Fixed rendering of grayscale images with alpha
 	  channel (STR #1703)
 	- Fixed occasional incomplete refresh (STR #1681)
